# personal-tools

./: README.md  Taskfile.yml  arch_check.py  bootstrap.py  generate_risky_csv.py  main.py  omarchy_check.py  pyproject.toml  requirements-dev.txt  setup.sh
.task/checksum/: rust-fmt
